Fixed right-aligned trail link

--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -321,10 +321,6 @@ Full-Width Styles
   background: url('../images/icon_download.png') no-repeat 0% 90%;
 }
 
-.alignright{
-     text-align: right;
-}
-
 .zip_download_link {
   display: block;
   float: right;
